--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-toggle-display": "^2.2.0",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
