--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "peaks.js": "^0.9.14",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -13,7 +14,7 @@
     "reactstrap": "^7.1.0"
   },
   "scripts": {
-    "start": "set PORT=4006 &&  react-scripts start",
+    "start": "PORT=3008 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
